--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -134,26 +134,26 @@ r2 <- calculateVarianceExplained(MOFAobject)
 
 ## Part 2: Characterisation of individual factors
 ### Inspection of top weighted features in the active views
-To get an overview of the weights across all factors in a given view you can use the 'showWeightHeatmap' function.
+To get an overview of the weights across all factors in a given view you can use the 'plotWeightsHeatmap' function.
 For example, here we plot all weights from all factors in the Mutation data:
 ```{r}
-showWeightHeatmap(MOFAobject, "Mutations", factors=c(1,2,3,4,5), show_colnames=F)
+plotWeightsHeatmap(MOFAobject, "Mutations", factors=c(1,2,3,4,5), show_colnames=F)
 ```
 Similarly, we can also plot all weights for a single factor using the 'showAllWeights' function.
 For example, here we plot all weights from Factor 1 in the Mutation data:
 ```{r}
-showAllWeights(MOFAobject, view = "Mutations", factor = "1")
+plotWeights(MOFAobject, view = "Mutations", factor = "1")
 ```
-If you are only interested in looking at the top features you can use the 'showTopWeights' function.
+If you are only interested in looking at the top features you can use the 'plotTopWeights' function.
 For example, here we plot the mutations with largest loadings on Factor 1:
 ```{r}
-showTopWeights(MOFAobject, "Mutations", "1")
+plotTopWeights(MOFAobject, "Mutations", "1")
 ```
 Features with large weight in a given factor means that they follow the pattern of covariation associated with the factor. For example, if a factor is capturing sex differences, then the largest weights will be associated with features that show sex-specific effects.
 
 From the previous plots, we can clearly see that Factor 1 is associated to IGHV status. Now if we look at the mRNA view, the top features will also be associated to IGHV status:
 ```{r}
-showTopWeights(MOFAobject, "mRNA", "1")
+plotTopWeights(MOFAobject, "mRNA", "1")
 ```
 
 Finally, instead of looking at an the "abstract" weight, it is useful to observe the coordinated heterogeneity of the top features in the original data. This can be done using the 'showDataHeatmap' function.
@@ -195,19 +195,19 @@ for (factor in interestingFactors) {
 
 ## Ordination of samples by factors to reveal clusters and graadients in the sample space
 
-Samples can be visualized along factors of interest using the 'scatterPlot' function.
+Samples can be visualized along factors of interest using the 'FactorsScatterPlot' function.
 ```{r}
-scatterPlot(MOFAobject, factors = c("1", "2"), color_by = "IGHV", shape_by = "trisomy12")
+FactorsScatterPlot(MOFAobject, factors = c("1", "2"), color_by = "IGHV", shape_by = "trisomy12")
 ```
 
-An overview of pair-wise sctterplots for all or a subset of factors is produced by the 'scatterPairs' function
+An overview of pair-wise sctterplots for all or a subset of factors is produced by the 'FactorsScatterPairs' function
 ```{r}
-scatterPairs(MOFAobject, factors = c("1", "2", "3", "4"), color_by = "IGHV")
+FactorsScatterPairs(MOFAobject, factors = c("1", "2", "3", "4"), color_by = "IGHV")
 ```
 
-A single factor can be visualised using the 'beeswarmPlot' function
+A single factor can be visualised using the 'FactorBeeswarmPlot' function
 ```{r}
-beeswarmPlot(MOFAobject, factors = "1", color_by = "IGHV")
+FactorBeeswarmPlot(MOFAobject, factors = "1", color_by = "IGHV")
 ```
 
 ## Customized analysis
@@ -244,10 +244,10 @@ imputedDrugs <- getImputedData(MOFAobject, view="Drugs")
 ```
 
 ## Clustering of samples based on latent factors
-Samples can be clustered according to their values on some or all latent factors using the 'clusterSamples' function. CLusters can for example be visualised using the scatterPlot function
+Samples can be clustered according to their values on some or all latent factors using the 'clusterSamples' function. CLusters can for example be visualised using the FactorsScatterPlot function
 ```{r}
 h <- clusterSamples(MOFAobject, k=2, factors="1")
-scatterPlot(MOFAobject, factors=c("1","2"), color_by=h$cluster)
+FactorsScatterPlot(MOFAobject, factors=c("1","2"), color_by=h$cluster)
 ```
 
 
