--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -11,9 +11,10 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This vignette show how to MOFA can be used to disentangle the heterogeneity in single-cell DNA methylation and RNA expression (scMT) data:
+This vignette show how to MOFA can be used to disentangle the heterogeneity in single-cell DNA methylation and RNA expression (scMT) data:  
+
 <p align="center"> 
-<img src="https://github.com/bioFAM/MOFA/blob/master/images/scmt.png" style="width: 50%; height: 50%"/>
+<img src="https://github.com/bioFAM/MOFA/blob/master/images/scmt.png" style="width: 30%; height: 30%"/>
 </p>
 
 Briefly, the data set consists of 87 mouse embryonic stem cells (mESCs), comprising of 16 cells cultured in ‘2i’ media, which induces a naive pluripotency state, and 71 serum-grown cells, which commits cells to a primed pluripotency state poised for cellular differentiation (Angermueller, 2016). 
@@ -106,10 +107,10 @@ MOFAobject
 After training, we can explore the results from MOFA. Here we provide a semi-automated pipeline to disentangle and characterize all the identified sources of variation (the factors):  
 
 <p align="center"> 
-<img src="https://github.com/bioFAM/MOFA/blob/master/images/workflow.png" style="width: 50%; height: 50%"/>
+<img src="https://github.com/bioFAM/MOFA/blob/master/images/workflow.png" style="width: 30%; height: 30%"/>
 </p>
 
-In a nutshell, first you need to calculate the variance explained ($R^2$) by each factor in each view. This is probably the most important result that MOFA produces, it summarises the entire heterogeneity of the dataset in a single figure: 
+In a nutshell, first you need to calculate the variance explained $R^2$ by each factor in each view. This is probably the most important result that MOFA produces, it summarises the entire heterogeneity of the dataset in a single figure: 
 
 Next, one has to characterise the individual factors as either technical or biological (i.e phenotypic) sources of variability. It can be done via three approaches: 
 
@@ -142,7 +143,7 @@ plotVarianceExplained(MOFAobject)
 ## Part 2: Characterisation of individual factors
 
 
-### Inspection of loadings
+### Part 2.1: Inspection of loadings for Factor 1
 Plotting the gene loadings for Factor 1, we can see that it is enriched for naive pluripotency marker genes such as Rex1/Zpf42, Tbx3, Fbxo15 and Essrb. Hence, based on previous studies (Mohammed et al, 2016) we can hypothetise that Factor 1 captures a transition from a naive pluripotent state to a primed pluripotent states.
 ```{r}
 # Plot all weights and highlight specific gene markers
@@ -152,17 +153,7 @@ plotWeights(MOFAobject, view="RNA expression", factor=1, nfeatures = 0, abs = T,
 plotTopWeights(MOFAobject, view="RNA expression", factor=1, nfeatures = 10)
 ```
 
-A similar analysis for Factor 2 reveals that it captures a second axis of differentiation from the primed pluripotency state to a differentiated state, with highest RNA loadings for known differentiation markers such as keratins and annexins
-```{r}
-# Plot all weights and highlight specific gene markers
-plotWeights(MOFAobject, view="RNA expression", factor=2, nfeatures = 0, manual=list(c("Krt8","Cald1","Anxa5","Tagln","Ahnak","Dsp","Anxa3","Krt19")), abs=T)
-
-# Plot top 10 genes
-plotTopWeights(MOFAobject, view="RNA expression", factor=2, nfeatures = 10)
-
-```
-
-Finally, instead of looking at the "abstract" weights, it is useful to observe, in the original data, the heterogeneity captured by a Factor. This can be done using the `plotDataHeatmap` function.
+Also, instead of looking at the "abstract" weights, it is useful to observe, in the original data, the heterogeneity captured by a Factor. This can be done using the `plotDataHeatmap` function.
 ```{r}
 # Add metadata to the plot
 factor1 <- sort(getFactors(MOFAobject,"1")[,1])
@@ -177,7 +168,19 @@ plotDataHeatmap(MOFAobject, view = "RNA expression", factor = 1, features = 20,
                 show_colnames=F, show_rownames=T, transpose = T, sortSamples = T, cluster_cols=F, annotation_col=df)
 ```
 
-## Ordination of samples by factors reveals the full differentiation trajectory
+
+### Part 2.2: Inspection of loadings for Factor 2
+A similar analysis for Factor 2 reveals that it captures a second axis of differentiation from the primed pluripotency state to a differentiated state, with highest RNA loadings for known differentiation markers such as keratins and annexins
+```{r}
+# Plot all weights and highlight specific gene markers
+plotWeights(MOFAobject, view="RNA expression", factor=2, nfeatures = 0, manual=list(c("Krt8","Cald1","Anxa5","Tagln","Ahnak","Dsp","Anxa3","Krt19")), abs=T)
+
+# Plot top 10 genes
+plotTopWeights(MOFAobject, view="RNA expression", factor=2, nfeatures = 10)
+```
+
+
+## Part 2.3: Ordination of samples by factors
 Samples can be visualized along factors of interest using the `plotFactorScatter` and `plotFactorBeeswarm` functions.  
 
 In this data set, the **combination of Factor 1 and Factor 2 captured the entire differentiation trajectory from naive pluripotent cells via primed pluripotent cells to differentiated cells**. This illustrates the importance of learning continuous latent factors rather than discrete sample assignments.
@@ -192,7 +195,7 @@ plotFactorBeeswarm(MOFAobject, factors = 3, color_by = "cellular_detection_rate"
 ```
 
 
-## Customized analysis
+## Part 3: Customized analysis
 For customized exploration of weights and factors, you can directly fetch the variables from the `MOFAobject using 'get' functions: `getWeights`, `getFactors` and `getTrainData`. As an example, here we do a scatterplot between Factor 3 and the true Cellular Detection Rate values
 ```{r}
 cdr <- colMeans(MOFAobject@TrainData$`RNA expression`>0,na.rm=T)
@@ -206,9 +209,9 @@ ggplot(foo, aes_string(x = "factor", y = "cdr")) +
 ```
 
 
-# Further functionalities 
+# Part 4: Further functionalities 
 
-## Imputation of missing observations
+## Part 4.1: Imputation of missing observations
 The factors can be used to impute missing data (see Methods of the publication). This is done using the `imputeMissing` function, which stores the imputed data in the `ImputedData` slot of the `MOFAobject`. It can be accessed via the `getImputedData` function:
 ```{r}
 MOFAobject <- imputeMissing(MOFAobject)
@@ -219,7 +222,7 @@ nonImputedMethylation[1:5,1:5]
 imputedMethylation[1:5,1:5]
 ```
 
-## Clustering of samples based on latent factors
+## Part 4.2: Clustering of samples based on latent factors
 Samples can be clustered according to their values on the latent factors using the `clusterSamples` function.
 ```{r}
 # Hierarchical clustering with K=2 using Factor 1
